test/recursiveFunctionReturn12.slq
// args: --run

def foo(n:!â„•){
	return bar(n)+foo(n sub 1); // error
}

def bar(n:!â„•){
	if nâ‰ 0{ return foo(n sub 1)+1; }
	return 0:!ğ”¹;
}

def main()â‡’foo(10);
